--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Karin Chill</h1>
-    <script src="index.js"></script>
+    <script src="../dist/bundle.js"></script>
 </body>
 </html>
