Retrieving Data from API & Displaying Information Using DOM

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Football Leagues</title>
     <link rel="stylesheet" href="style.scss">
 </head>
 <body>
-    <h1>Karin Chill</h1>
+    <div class="container">
+        <h1 class="main-header">Football Leagues</h1>
+        <div class="tab-container"></div>
+        <div class="teams-container"></div>
+    </div>
     <script src="../dist/bundle.js"></script>
 </body>
 </html>
