Fixing scss & fixing comments in the index.ts file

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Football Leagues</title>
+    <title>Football Leagues 🏈</title>
     <link rel="stylesheet" href="style.scss">
 </head>
 <body>
     <div class="container">
-        <h1 class="main-header">Football Leagues</h1>
+        <h1 class="main-header">Football Leagues 🏈</h1>
         <div class="tab-container"></div>
         <div class="teams-container"></div>
     </div>
